# Lora-Node-Cortex72

./: .gitignore  CMakeLists.txt  README.md
examples/send_receive_otaa/: CMakeLists.txt  config.h  main.c
src/: lorawan.c
src/boards/: board.c  delay-board.c  eeprom-board.c  gpio-board.c  ioexpander.c  radio-board.c  rtc-board.c  spi-board.c  sx1262-board.c
src/include/: board-config.h  ioexpander.h  lorawan.h  pinName-board.h
